--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "createdAt": "2023-09-22T12:23:39.903Z",
     "version": "7.1.0",
     "commit": "d257c41694344460623eb1f1bb2a690bdfe33f83"
+  },
+  "dependencies": {
+    "axios": "^1.6.1"
   }
 }
