--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest --coverage"
   }
 }
