--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "commit": "d257c41694344460623eb1f1bb2a690bdfe33f83"
   },
   "dependencies": {
-    "axios": "^1.6.1"
+    "axios": "^1.6.1",
+    "markdown-link-extractor": "^3.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
