--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "md-links",
   "version": "0.1.0",
+  "autor": "sara ramirez matias",
   "engines": {
     "node": ">=16.x"
   },
@@ -17,6 +18,8 @@
     "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "start": "node src/cli.js"
   }
+  
 }
