--- a/package.json
+++ b/package.json
@@ -19,7 +19,22 @@
   },
   "scripts": {
     "test": "jest --coverage",
-    "start": "node src/cli.js"
-  }
-  
+    "start": "index.js"
+  },
+  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Consideraciones técnicas](#5-consideraciones-técnicas)\r * [6. Hitos](#6-hitos)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Pistas, tips y lecturas complementarias](#8-pistas-tips-y-lecturas-complementarias)\r * [9. Para pedir project feedback](#9-para-pedir-project-feedback)",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ramatis12/DEV011-md-links.git"
+  },
+  "author": "Sara Ramirez Matias",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ramatis12/DEV011-md-links/issues"
+  },
+  "homepage": "https://github.com/ramatis12/DEV011-md-links#readme"
 }
