--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "markdown-link-extractor": "^3.1.0"
   },
   "devDependencies": {
+    "ed-grid": "^3.0.2",
     "jest": "^29.7.0"
   },
   "scripts": {
     "test": "jest --coverage",
     "start": "index.js"
   },
-  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Consideraciones técnicas](#5-consideraciones-técnicas)\r * [6. Hitos](#6-hitos)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Pistas, tips y lecturas complementarias](#8-pistas-tips-y-lecturas-complementarias)\r * [9. Para pedir project feedback](#9-para-pedir-project-feedback)",
+  "description": "* Funsion mdLinks",
   "main": "index.js",
   "directories": {
     "doc": "docs",
